--- a/Nameste-react/index.html
+++ b/Nameste-react/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+
+    <script src="./App.jsx" type="module" defer></script>
 </head>
 <body>
     <div id="root"></div>
 
-    <script src="./script.js" type="module"></script>
 </body>
 </html>
